force-app/main/default/objects/Asset/fields/A_Side_Asset__c.field-meta.xml
<CustomField>
    <fullName>A_Side_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The A-side service asset for cross-connect topology. Populated by IP-2 Asset Sync from Odoo ns_a_side_service_id.</inlineHelpText>
    <label>A-Side Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>B-Side Assets</relationshipLabel>
    <relationshipName>A_Side_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>