force-app/main/default/objects/Asset/fields/Asset_Lifecycle_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Lifecycle_Status__c</fullName>
    <inlineHelpText>Current stage of this service asset. Ordered = provisioning not yet started. In Provisioning = being built. In Service = live and billing. Suspended = paused. Terminated = service ended.</inlineHelpText>
    <label>Asset Lifecycle Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>In Provisioning</fullName>
            </value>
            <value>
                <fullName>In Service</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Customer Acceptance</fullName>
                <isActive>false</isActive>
                <label>Customer Acceptance</label>
            </value>
            <value>
                <fullName>Pending Change</fullName>
                <isActive>false</isActive>
                <label>Pending Change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>