force-app/main/default/objects/Asset/fields/Asset_RDD__c.field-meta.xml
<CustomField>
    <fullName>Asset_RDD__c</fullName>
    <inlineHelpText>The RDD from the original Order at the time of provisioning. Preserved for reference if the delivery date is later changed. Do not edit manually.</inlineHelpText>
    <label>Original Requested Delivery Date</label>
    <type>Date</type>
</CustomField>