force-app/main/default/objects/Asset/fields/Billing_Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Charge_Type__c</fullName>
    <description>Advance or Arrear from Odoo IBS record. Populated by IP-2.</description>
    <label>Billing Charge Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>