force-app/main/default/objects/Asset/fields/Billing_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Billing_Multiplier__c</fullName>
    <description>Odoo billing multiplier from IBS record. Populated by IP-2.</description>
    <label>Billing Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>