force-app/main/default/objects/Asset/fields/BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The BAN (Billing Account Number) this asset is billed under. Set when the order is confirmed and an asset is provisioned. Drives billing reconciliation between SF assets and Odoo subscriptions.</inlineHelpText>
    <label>Billing Account</label>
    <referenceTo>BillingAccount__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>