force-app/main/default/objects/Asset/fields/Change_Asset__c.field-meta.xml
<CustomField>
    <fullName>Change_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to the most recent Change Order that modified this asset. Updated automatically when a Change Order is activated. Do not edit manually.</inlineHelpText>
    <label>Most Recent Change Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Assets (Change Order)</relationshipLabel>
    <relationshipName>Change_Asset_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>