force-app/main/default/objects/Asset/fields/Charge_Through_Date__c.field-meta.xml
<CustomField>
    <fullName>Charge_Through_Date__c</fullName>
    <description>Odoo billing period end date from IBS record. Populated by IP-2.</description>
    <label>Charge Through Date</label>
    <type>Date</type>
</CustomField>