force-app/main/default/objects/Asset/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The primary contact for this Asset, carried forward from the source Order. Used for support and change order routing.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Contact_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>