force-app/main/default/objects/Asset/fields/Contract_End__c.field-meta.xml
<CustomField>
    <fullName>Contract_End__c</fullName>
    <formula>ADDMONTHS(Source_Order__r.EffectiveDate, Source_Order__r.Contract_Term_Months__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-calculated expiry date: Source Order start date plus contract term in months. Drives renewal workflow timing. Read-only.</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>