force-app/main/default/objects/Asset/fields/Contracted_USD_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contracted_USD_Amount__c</fullName>
    <description>Odoo contracted USD amount from IBS record. Populated by IP-2.</description>
    <label>Contracted USD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>