force-app/main/default/objects/Asset/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Contract record associated with this asset&apos;s service term. Populated when the Order is contracted. Used for renewal and ETF calculations.</inlineHelpText>
    <label>Child Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>ContractId_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>