force-app/main/default/objects/Asset/fields/Customer_Service_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Reference__c</fullName>
    <label>Customer Service Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>