force-app/main/default/objects/Asset/fields/Dimension_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Quantity__c</fullName>
    <inlineHelpText>The numeric quantity for this asset&apos;s primary dimension - e.g. 2 (cabinets), 10 (kW), 1 (Gbps). Paired with Dimension Unit of Measure.</inlineHelpText>
    <label>Dimension Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>