force-app/main/default/objects/Asset/fields/Dimension_UoM__c.field-meta.xml
<CustomField>
    <fullName>Dimension_UoM__c</fullName>
    <inlineHelpText>The unit that quantifies this asset: kW for power, Cabinets for colocation space, Circuits or Gbps for connectivity, RU for rack units. Paired with Dimension Quantity.</inlineHelpText>
    <label>Dimension Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>kW</fullName>
            </value>
            <value>
                <fullName>Cabinets</fullName>
            </value>
            <value>
                <fullName>Circuits</fullName>
            </value>
            <value>
                <fullName>Gbps</fullName>
            </value>
            <value>
                <fullName>RU</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>