force-app/main/default/objects/Asset/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <description>Odoo discount percentage from IBS record. Populated by IP-2.</description>
    <label>Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>