force-app/main/default/objects/Asset/fields/Free_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Free_Period_End_Date__c</fullName>
    <inlineHelpText>Last day of the billing-free period for this asset. Billing to Odoo starts the day after this date. Populated from the Order if free months were granted.</inlineHelpText>
    <label>Free Period End Date</label>
    <type>Date</type>
</CustomField>