force-app/main/default/objects/Asset/fields/Free_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Free_Period_Start_Date__c</fullName>
    <inlineHelpText>First day of the billing-free period for this asset. Typically aligns with the Service Commencement Date when free months are granted at deal close.</inlineHelpText>
    <label>Free Period Start Date</label>
    <type>Date</type>
</CustomField>