force-app/main/default/objects/Asset/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to the physical breaker or port record in the Inventory object that this asset is connected to. Used for capacity tracking and cross-connect management.</inlineHelpText>
    <label>Physical Inventory (Breaker/Port)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Inventory__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Inventory_Breaker</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Assets (Inventory)</relationshipLabel>
    <relationshipName>Inventory_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>