force-app/main/default/objects/Asset/fields/Legacy_Bill_No__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Bill_No__c</fullName>
    <description>Legacy billing number from Odoo IBS record. Populated by IP-2.</description>
    <label>Legacy Bill No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>