force-app/main/default/objects/Asset/fields/Legacy_Order_Reference__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Order_Reference__c</fullName>
    <inlineHelpText>Original order reference from the source system (Odoo or legacy CRM) for migrated assets. Read-only after migration. Used for traceability during and after the migration period.</inlineHelpText>
    <label>Legacy Order Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>