force-app/main/default/objects/Asset/fields/Migration_Source__c.field-meta.xml
<CustomField>
    <fullName>Migration_Source__c</fullName>
    <inlineHelpText>Indicates how this asset was created. Blank for natively-created assets. Set during data migration to identify the source system.</inlineHelpText>
    <label>Migration Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Migrated from Odoo</fullName>
            </value>
            <value>
                <fullName>Salesforce Native</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>