force-app/main/default/objects/Asset/fields/MRC__c.field-meta.xml
<CustomField>
    <fullName>MRC__c</fullName>
    <inlineHelpText>The monthly billing amount for this asset in USD. Populated from the Order line item at provisioning. Passed to Odoo for subscription billing. Do not edit manually.</inlineHelpText>
    <label>Monthly Recurring Charge (USD)</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>