force-app/main/default/objects/Asset/fields/NRC__c.field-meta.xml
<CustomField>
    <fullName>NRC__c</fullName>
    <inlineHelpText>One-time charge for this asset such as installation or fit-out fees. Populated from the Order line item at provisioning. Invoiced once, not part of recurring billing.</inlineHelpText>
    <label>Non-Recurring Charge (USD)</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>