force-app/main/default/objects/Asset/fields/Odoo_IB_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_IB_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Populated automatically by the Odoo integration. Do not edit manually.</inlineHelpText>
    <label>Odoo Install Base ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>