force-app/main/default/objects/Asset/fields/Odoo_Origin_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Origin_Line_ID__c</fullName>
    <inlineHelpText>Odoo ns_origin_sale_line_id - the original sale order line that generated this subscription line. Shared across all Assets created from the same grouped subscription line. Populated automatically by IP-2. Used by IP-4 change orders as ns_origin_sale_line_id. Do not edit manually.</inlineHelpText>
    <label>Odoo Origin Order Line ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>