force-app/main/default/objects/Asset/fields/Odoo_Status__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Status__c</fullName>
    <label>Odoo Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>