force-app/main/default/objects/Asset/fields/Odoo_Sub_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Sub_Line_ID__c</fullName>
    <inlineHelpText>Odoo sale.subscription.line ID. Shared across all Assets created from the same grouped subscription line. Populated automatically by IP-2. Used by IP-4 change orders as ns_subscription_line_id. Do not edit manually.</inlineHelpText>
    <label>Odoo Subscription Line ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>