force-app/main/default/objects/Asset/fields/Odoo_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Subscription_ID__c</fullName>
    <inlineHelpText>Populated automatically by the Odoo integration. Do not edit manually.</inlineHelpText>
    <label>Odoo Subscription ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>