force-app/main/default/objects/Asset/fields/Odoo_Target_BAN_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Target_BAN_ID__c</fullName>
    <description>Odoo target BAN ID from IBS record. Populated by IP-2.</description>
    <label>Odoo Target BAN ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>