force-app/main/default/objects/Asset/fields/Operation_Site__c.field-meta.xml
<CustomField>
    <fullName>Operation_Site__c</fullName>
    <inlineHelpText>The Digital Edge data centre site where this asset is physically located. Populated from the Order at provisioning.</inlineHelpText>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HK01</fullName>
            </value>
            <value>
                <fullName>HK02</fullName>
            </value>
            <value>
                <fullName>SG01</fullName>
            </value>
            <value>
                <fullName>KR01</fullName>
            </value>
            <value>
                <fullName>PH01</fullName>
            </value>
            <value>
                <fullName>ID01</fullName>
            </value>
            <value>
                <fullName>JP01</fullName>
            </value>
            <value>
                <fullName>BKK1</fullName>
                <isActive>false</isActive>
                <label>BKK1</label>
            </value>
            <value>
                <fullName>BKK2</fullName>
                <isActive>false</isActive>
                <label>BKK2</label>
            </value>
            <value>
                <fullName>BOM1</fullName>
                <isActive>false</isActive>
                <label>BOM1</label>
            </value>
            <value>
                <fullName>BOM2</fullName>
                <isActive>false</isActive>
                <label>BOM2</label>
            </value>
            <value>
                <fullName>BOM3</fullName>
                <isActive>false</isActive>
                <label>BOM3</label>
            </value>
            <value>
                <fullName>CGK1</fullName>
                <isActive>false</isActive>
                <label>CGK1</label>
            </value>
            <value>
                <fullName>CGK2</fullName>
                <isActive>false</isActive>
                <label>CGK2</label>
            </value>
            <value>
                <fullName>CGK7</fullName>
                <isActive>false</isActive>
                <label>CGK7</label>
            </value>
            <value>
                <fullName>JKT1</fullName>
                <isActive>false</isActive>
                <label>JKT1</label>
            </value>
            <value>
                <fullName>JKT2</fullName>
                <isActive>false</isActive>
                <label>JKT2</label>
            </value>
            <value>
                <fullName>MNL1</fullName>
                <isActive>false</isActive>
                <label>MNL1</label>
            </value>
            <value>
                <fullName>OSA1</fullName>
                <isActive>false</isActive>
                <label>OSA1</label>
            </value>
            <value>
                <fullName>OSA2</fullName>
                <isActive>false</isActive>
                <label>OSA2</label>
            </value>
            <value>
                <fullName>PEK1</fullName>
                <isActive>false</isActive>
                <label>PEK1</label>
            </value>
            <value>
                <fullName>PUS1</fullName>
                <isActive>false</isActive>
                <label>PUS1</label>
            </value>
            <value>
                <fullName>SEL1</fullName>
                <isActive>false</isActive>
                <label>SEL1</label>
            </value>
            <value>
                <fullName>SEL2</fullName>
                <isActive>false</isActive>
                <label>SEL2</label>
            </value>
            <value>
                <fullName>TYO1</fullName>
                <isActive>false</isActive>
                <label>TYO1</label>
            </value>
            <value>
                <fullName>TYO2</fullName>
                <isActive>false</isActive>
                <label>TYO2</label>
            </value>
            <value>
                <fullName>TYO3</fullName>
                <isActive>false</isActive>
                <label>TYO3</label>
            </value>
            <value>
                <fullName>TYO4</fullName>
                <isActive>false</isActive>
                <label>TYO4</label>
            </value>
            <value>
                <fullName>TYO5</fullName>
                <isActive>false</isActive>
                <label>TYO5</label>
            </value>
            <value>
                <fullName>TYO6</fullName>
                <isActive>false</isActive>
                <label>TYO6</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>