force-app/main/default/objects/Asset/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Opportunity that originated this Asset. Carried forward from Order.OpportunityId at Asset creation. Enables Asset visibility on the Opportunity record.</inlineHelpText>
    <label>Source Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Opportunity_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>