force-app/main/default/objects/Asset/fields/Original_Asset__c.field-meta.xml
<CustomField>
    <fullName>Original_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Direct pointer to the first asset in this CO chain (the original provisioned service). Enables one-hop navigation to chain origin without traversing the full chain. Populated automatically when this asset is created from a Change Order.</inlineHelpText>
    <label>Original Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Assets (CO Chain Descendants)</relationshipLabel>
    <relationshipName>CO_Chain_Descendants</relationshipName>
    <type>Lookup</type>
</CustomField>