force-app/main/default/objects/Asset/fields/Previous_Asset__c.field-meta.xml
<CustomField>
    <fullName>Previous_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The asset that this one replaced when a Change Order was executed. Populated when this asset is created from a Change Order. Enables backward navigation of the asset CO chain.</inlineHelpText>
    <label>Previous Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Assets (Successor)</relationshipLabel>
    <relationshipName>Successor_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>