force-app/main/default/objects/Asset/fields/Product_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Product_Attribute__c</fullName>
    <description>Odoo product attribute text from IBS record (e.g. &quot;Draw Cap in kW: 5&quot;). Populated by IP-2.</description>
    <label>Product Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>