force-app/main/default/objects/Asset/fields/Replacement_Asset__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The asset that replaced this one when a Change Order was executed. Populated automatically when a successor asset is created from a Change Order. Enables forward navigation of the asset CO chain.</inlineHelpText>
    <label>Replacement Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Assets (Replaced By)</relationshipLabel>
    <relationshipName>Replaced_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>