force-app/main/default/objects/Asset/fields/SCD__c.field-meta.xml
<CustomField>
    <fullName>SCD__c</fullName>
    <inlineHelpText>The date the customer&apos;s service went live. Billing starts from this date. Set by the provisioning team when the service is handed over. Contract term is measured from SCD.</inlineHelpText>
    <label>Service Commencement Date</label>
    <type>Date</type>
</CustomField>