force-app/main/default/objects/Asset/fields/SCD_Override_Approved__c.field-meta.xml
<CustomField>
    <fullName>SCD_Override_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check once a finance or operations manager has approved a manual change to the Service Commencement Date. Required before SCD can be edited outside of normal provisioning workflow.</inlineHelpText>
    <label>SCD Override Approved</label>
    <type>Checkbox</type>
</CustomField>