force-app/main/default/objects/Asset/fields/Service_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_ID__c</fullName>
    <inlineHelpText>The Odoo x_studio_service_id — the customer-facing service identifier assigned by Odoo. Populated by IP-2 Asset Sync.</inlineHelpText>
    <label>Odoo Service ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>