force-app/main/default/objects/Asset/fields/Source_Order__c.field-meta.xml
<CustomField>
    <fullName>Source_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Order that created this asset. Populated automatically at provisioning. Used to trace the asset back to its originating deal and contract term.</inlineHelpText>
    <label>Source Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Assets (Source Order)</relationshipLabel>
    <relationshipName>Source_Order_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>