force-app/main/default/objects/Asset/fields/Source_OrderItem__c.field-meta.xml
<CustomField>
    <fullName>Source_OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The specific Order line item (product) that generated this asset. Populated automatically at provisioning. Links asset pricing back to the original order line.</inlineHelpText>
    <label>Source Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Assets (Source Order Item)</relationshipLabel>
    <relationshipName>Source_OrderItem_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>