force-app/main/default/objects/Asset/fields/Space__c.field-meta.xml
<CustomField>
    <fullName>Space__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to the cabinet or cage record in the Inventory object where this asset is physically housed. Used for capacity management and space utilisation reporting.</inlineHelpText>
    <label>Physical Space (Cabinet/Cage)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Inventory__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Inventory_Space</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Assets (Space)</relationshipLabel>
    <relationshipName>Space_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>