force-app/main/default/objects/Asset/fields/SRD__c.field-meta.xml
<CustomField>
    <fullName>SRD__c</fullName>
    <inlineHelpText>The date the provisioning request was formally raised with the operations team. Used to measure provisioning lead time from request to SCD.</inlineHelpText>
    <label>Service Request Date</label>
    <type>Date</type>
</CustomField>