force-app/main/default/objects/Asset/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <description>Odoo tax rate from IBS record. Populated by IP-2.</description>
    <label>Tax Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>