force-app/main/default/objects/Asset/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <inlineHelpText>The date this asset&apos;s service was or will be terminated. Set when a Churn Order is activated. Billing stops from this date in Odoo.</inlineHelpText>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>