force-app/main/default/objects/Asset/fields/Z_Side_Asset__c.field-meta.xml
<CustomField>
    <fullName>Z_Side_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Z-side service asset for cross-connect topology. Populated by IP-2 Asset Sync from Odoo ns_z_side_service_id.</inlineHelpText>
    <label>Z-Side Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>A-Side Assets</relationshipLabel>
    <relationshipName>Z_Side_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>